feat: spammer protection
